# PandaEvo

./: .all-contributorsrc  .gitignore  LICENSE  README.en.md  README.md  docker-compose.yaml  start.bat
python-service/: .cursorignore  .gitignore  ARCHITECTURE.md  Dockerfile  SKILL.md  config.yaml  main.py  memory.md  pyproject.toml  test_main.http
python-service/.gitea/workflows/: ci.yml
python-service/app/: agent.py  config.py  evolution.py  gitops.py  logger.py  orchestrator.py  worker.py
python-service/app/coder/: agent.py  gitea.py  tools.py
python-service/app/context/: frontmatter.py
python-service/app/db/: __init__.py  database.py  migration.py  models.py
python-service/app/mcp/: __init__.py  adapter.py  builtin.py  client.py  manager.py
python-service/app/providers/: llm.py  store.py
python-service/app/repo_sync/: __init__.py  service.py
python-service/app/routers/: fs.py  mcp.py  providers.py  purposes.py  reload.py  sessions.py  skills.py
python-service/app/rules/: __init__.py  discovery.py  integrator.py  loader.py  matcher.py  model.py  snapshot.py
python-service/app/sandbox/: __init__.py  manager.py  sandbox.py
python-service/migrations/: 20260307000000_init_sessions.sql  20260308000000_create_mcp_servers.sql  20260308000001_create_plans.sql  20260309000000_create_llm_providers.sql  20260309120000_add_category_to_llm_providers.sql  20260310000000_decouple_provider_category.sql  20260310120000_model_purpose_binding.sql  20260310150000_purpose_models_many_to_many.sql
python-service/seeds/: 20260307000000_guest_user.sql
(+58 files in other folders)
